[gd_scene load_steps=13 format=3 uid="uid://dtjcb347i0ti3"]

[ext_resource type="Theme" uid="uid://i3oiikl2225l" path="res://themes/default.tres" id="1_76eor"]
[ext_resource type="PackedScene" uid="uid://bvy5hcnfgt1e8" path="res://scenes/dice_button.tscn" id="1_edu4q"]
[ext_resource type="Texture2D" uid="uid://c2bg61jiqp3s8" path="res://assets/d6.png" id="2_5337t"]
[ext_resource type="Texture2D" uid="uid://ff51a616g2u0" path="res://assets/d8.png" id="3_5fylg"]
[ext_resource type="Texture2D" uid="uid://bmt11pg1hine8" path="res://assets/d10.png" id="4_23apc"]
[ext_resource type="Texture2D" uid="uid://nfwgxymmjihw" path="res://assets/d12.png" id="5_p7jb7"]
[ext_resource type="Texture2D" uid="uid://doeg6wfjde3an" path="res://assets/d20.png" id="6_xs6di"]
[ext_resource type="Script" path="res://scripts/dice_result_button.gd" id="7_kg6rj"]
[ext_resource type="Resource" uid="uid://d0hjjki7jknfu" path="res://resources/dice_tally.tres" id="8_er55a"]
[ext_resource type="PackedScene" uid="uid://cejp7in6euedf" path="res://scenes/combat_panel.tscn" id="9_65e2k"]
[ext_resource type="Script" path="res://scripts/note_taker.gd" id="9_hm85s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s4cgq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_76eor")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="HSplitContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 180

[node name="DiceBackground" type="Panel" parent="Panel/MainPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="DiceContainer" type="VBoxContainer" parent="Panel/MainPanel/DiceBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiceBox" type="HFlowContainer" parent="Panel/MainPanel/DiceBackground/DiceContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="d4" parent="Panel/MainPanel/DiceBackground/DiceContainer/DiceBox" instance=ExtResource("1_edu4q")]
layout_mode = 2

[node name="d6" parent="Panel/MainPanel/DiceBackground/DiceContainer/DiceBox" instance=ExtResource("1_edu4q")]
layout_mode = 2
icon = ExtResource("2_5337t")
diceValue = 6

[node name="d8" parent="Panel/MainPanel/DiceBackground/DiceContainer/DiceBox" instance=ExtResource("1_edu4q")]
layout_mode = 2
icon = ExtResource("3_5fylg")
diceValue = 8

[node name="d10" parent="Panel/MainPanel/DiceBackground/DiceContainer/DiceBox" instance=ExtResource("1_edu4q")]
layout_mode = 2
icon = ExtResource("4_23apc")
diceValue = 10

[node name="d12" parent="Panel/MainPanel/DiceBackground/DiceContainer/DiceBox" instance=ExtResource("1_edu4q")]
layout_mode = 2
icon = ExtResource("5_p7jb7")
diceValue = 12

[node name="d20" parent="Panel/MainPanel/DiceBackground/DiceContainer/DiceBox" instance=ExtResource("1_edu4q")]
layout_mode = 2
icon = ExtResource("6_xs6di")
diceValue = 20

[node name="DiceResultButton" type="Button" parent="Panel/MainPanel/DiceBackground/DiceContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_s4cgq")
text = "00"
flat = true
script = ExtResource("7_kg6rj")
diceTally = ExtResource("8_er55a")

[node name="Label" type="Label" parent="Panel/MainPanel/DiceBackground/DiceContainer/DiceResultButton"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -2.0
offset_right = 38.0
offset_bottom = 26.0
grow_horizontal = 0

[node name="Timer" type="Timer" parent="Panel/MainPanel/DiceBackground/DiceContainer/DiceResultButton"]

[node name="VSplitContainer" type="VSplitContainer" parent="Panel/MainPanel"]
layout_mode = 2
split_offset = 800

[node name="TabContainer" type="TabContainer" parent="Panel/MainPanel/VSplitContainer"]
layout_mode = 2

[node name="combat_panel" parent="Panel/MainPanel/VSplitContainer/TabContainer" instance=ExtResource("9_65e2k")]
layout_mode = 2

[node name="NoteTaker" type="VBoxContainer" parent="Panel/MainPanel/VSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MainPanel/VSplitContainer/NoteTaker"]
layout_mode = 2

[node name="OpenButton" type="Button" parent="Panel/MainPanel/VSplitContainer/NoteTaker/HBoxContainer"]
layout_mode = 2
text = "Open File"

[node name="SaveButton" type="Button" parent="Panel/MainPanel/VSplitContainer/NoteTaker/HBoxContainer"]
layout_mode = 2
text = "Save File"

[node name="NewButton" type="Button" parent="Panel/MainPanel/VSplitContainer/NoteTaker/HBoxContainer"]
layout_mode = 2
text = "New File"

[node name="TextEdit" type="TextEdit" parent="Panel/MainPanel/VSplitContainer/NoteTaker"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("9_hm85s")

[node name="FileDialog" type="FileDialog" parent="Panel/MainPanel/VSplitContainer/NoteTaker/TextEdit"]
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(800, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.txt")

[connection signal="pressed" from="Panel/MainPanel/DiceBackground/DiceContainer/DiceResultButton" to="Panel/MainPanel/DiceBackground/DiceContainer/DiceResultButton" method="_on_pressed"]
[connection signal="timeout" from="Panel/MainPanel/DiceBackground/DiceContainer/DiceResultButton/Timer" to="Panel/MainPanel/DiceBackground/DiceContainer/DiceResultButton" method="_hideRecentText"]
[connection signal="pressed" from="Panel/MainPanel/VSplitContainer/NoteTaker/HBoxContainer/OpenButton" to="Panel/MainPanel/VSplitContainer/NoteTaker/TextEdit" method="_on_open_button_pressed"]
[connection signal="pressed" from="Panel/MainPanel/VSplitContainer/NoteTaker/HBoxContainer/SaveButton" to="Panel/MainPanel/VSplitContainer/NoteTaker/TextEdit" method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/MainPanel/VSplitContainer/NoteTaker/HBoxContainer/NewButton" to="Panel/MainPanel/VSplitContainer/NoteTaker/TextEdit" method="_on_new_button_pressed"]
[connection signal="file_selected" from="Panel/MainPanel/VSplitContainer/NoteTaker/TextEdit/FileDialog" to="Panel/MainPanel/VSplitContainer/NoteTaker/TextEdit" method="_on_file_dialog_file_selected"]
